--- a/css/common.css
+++ b/css/common.css
@@ -68,8 +68,20 @@ a:focus {
   color: #404040;
   text-decoration: none;
 }
+.bg {
+  background: #ECECEC;
+}
 .b-b {
   border-bottom: 1px solid #c3c3c3;
+}
+.ball {
+  border: 1px solid #e5e5e5;
+}
+.pbb {
+  padding-bottom: 60px;
+}
+.pbb-s {
+  margin-bottom: 20px;
 }
 .w75 {
   width: 65%;
@@ -81,6 +93,9 @@ a:focus {
 }
 .mb {
   margin-bottom: 20px;
+}
+.mb-s {
+  margin-bottom: 35px;
 }
 .text-muted {
   color: #909090;
@@ -94,6 +109,9 @@ a:focus {
 .bb {
   border-bottom: 1px dashed #F2F2F2;
 }
+.pl {
+  padding-left: 15px;
+}
 .biao {
   margin-bottom: 35px;
 }
@@ -101,9 +119,6 @@ a:focus {
   color: #909090;
   font-size: 30px;
   margin-top: 0;
-}
-.biao p.b-b {
-  margin-bottom: 30px;
 }
 .biao p.b-b span {
   display: inline-block;
@@ -113,4 +128,103 @@ a:focus {
 }
 .biao .w75 {
   line-height: 25px;
+}
+.about dl {
+  width: 30%;
+  overflow: hidden;
+  margin: 0;
+  cursor: pointer;
+  background: #fff;
+}
+.about dl:hover {
+  box-shadow: 0px 0px 20px  #646473;
+}
+.about .dl-middle {
+  margin: 0 5%;
+}
+.about h5 {
+  color: #21A900;
+  font-size: 18px;
+}
+.about .heng {
+  width: 30px;
+  height: 1px;
+  background: #21A900;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+.nav-info {
+  padding: 60px 0  45px;
+}
+.nav-info dl {
+  width: 130px;
+  margin-left: 90px;
+  text-align: center;
+  float: left;
+}
+.nav-info dt {
+  width: 130px;
+  height: 130px;
+  line-height: 130px;
+  text-align: center;
+  margin-bottom: 30px;
+  border-radius: 50%;
+  background: #EEEEEE;
+  cursor: pointer;
+}
+.nav-info dt i {
+  font-size: 80px;
+  font-weight: normal;
+  color: #21A900;
+}
+.nav-info dt:hover {
+  background: #21A900;
+}
+.nav-info dt:hover i {
+  color: #fff;
+}
+.nav-info .ying {
+  color: #909090;
+}
+.common-pagation .pagination {
+  margin: 0 0 60px;
+}
+.common-pagation .pagination a {
+  color: #808080;
+}
+.common-pagation .pagination a:hover,
+.common-pagation .pagination a:focus,
+.common-pagation .pagination a.on {
+  background: #21a900;
+  color: #fff;
+}
+.new .new-left {
+  width: 430px;
+}
+.new h6 {
+  color: #404040;
+  font-size: 16px;
+}
+.new .new-right {
+  width: 740px;
+}
+.new .new-right ul {
+  list-style: none;
+  padding: 0;
+}
+.new .new-right .n-left {
+  padding-top: 15px;
+  width: 82px;
+  height: 82px;
+  background: #F2F2F2;
+  text-align: center;
+  color: #909090;
+}
+.new .new-right .n-left h4 {
+  margin-top: 0;
+  color: #707070;
+}
+.new .new-right .n-right {
+  width: 635px;
+  color: #808080;
 }
