--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,12 @@ a:focus {
 .owl-carousel .item {
   display: block;
 }
+.owl-img {
+  width: 1200px;
+}
 .owl-img .item {
+  width: 188px;
+  display: inline-block;
   margin: 0 24px;
 }
 .owl-img .item img {
