--- a/css/index.less
+++ b/css/index.less
@@ -27,10 +27,18 @@ a:focus{
   display: block;
 
 }
+.owl-img{
+  width: 1200px;
+
+
+}
 .owl-img .item{
+  width: 188px;
+  display: inline-block;
   margin: 0 24px;
 
 }
+
 .owl-img .item img{
   border: 1px solid #E5E5E5;
 }
